--- a/src/components/Film-item/Film-item.scss
+++ b/src/components/Film-item/Film-item.scss
@@ -27,3 +27,9 @@
     margin: 0;
     font-size: 10px;
 }
+
+.LinesEllipsis-ellipsis {
+    font-size: 10px;
+    color: rgba(92, 157, 255, 0.5);
+    cursor: pointer;
+}
