завкончил разворачивание и сворачивание описания по клику

--- a/src/components/Film-item/Film-item.scss
+++ b/src/components/Film-item/Film-item.scss
@@ -28,3 +28,10 @@
     font-size: 10px;
 }
 
+.LinesEllipsis-ellipsis {
+    color: rgba(92, 157, 255, 0.5);
+}
+
+.MuiListItemText-secondary {
+    cursor: pointer;
+}
