--- a/src/components/filmItem/FilmItem.scss
+++ b/src/components/filmItem/FilmItem.scss
@@ -14,6 +14,11 @@
     justify-content: flex-end;
 }
 
+.film-item__title {
+    text-decoration: none;
+    color: black;
+}
+
 .Film-item__logo {
     margin-right: 12px;
     height: 13px;
