--- a/src/components/pages/AboutFilm.scss
+++ b/src/components/pages/AboutFilm.scss
@@ -3,3 +3,43 @@
     display: block;
     margin: 50px auto 0 auto;
 }
+
+.about-film__title {
+    margin: 50px 0 0 0;
+}
+
+.about-film__second-title-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.about-film__ratings-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 50px;
+    font-size: 30px;
+    font-weight: bold;
+    gap: 50px;
+}
+
+.about-film__rating {
+    margin: 0 50px 0 0;
+}
+
+.about-film__logo {
+    height: 50px;
+    margin-left: 50px;
+}
+
+.about-film__logo_kinopoisk {
+    height: 50px;
+    margin-left: 75px;
+}
+
+.about-film__rating-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+}
