--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -9,6 +9,11 @@ body {
     --primary-500-10: rgba(91,74,244,0.1);
     --primary-600: #493bc3;
     --primary-700: #362c92;
+    --primary-700-40: rgba(54, 44, 146, .4);
+    --primary-700-50: rgba(54, 44, 146, .5);
+    --primary-700-60: rgba(54, 44, 146, .6);
+    --primary-700-70: rgba(54, 44, 146, .7);
+    --primary-700-80: rgba(54, 44, 146, .8);
     --primary-800: #251e62;
     --primary-900: #120f31;
     --secondary-50: #e4f4ff;
@@ -63,6 +68,7 @@ body {
     --warning-900: #33230f;
     --grey-50: #ebeef5;
     --grey-100: #c3c8d4;
+    --grey-100-23: rgba(195, 200, 212, .23);
     --grey-200: #a8aebf;
     --grey-300: #8e95a9;
     --grey-400: #767e94;
