--- a/src/index.scss
+++ b/src/index.scss
@@ -20,7 +20,7 @@ code {
   min-width: 360px;
 } */
 
-@import './vendor/normalize.css';
+@import './vendor/normalize.scss';
 @import './styles/variables.scss';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
 
