--- a/src/index.scss
+++ b/src/index.scss
@@ -1,30 +1,6 @@
-/* @import "https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css";
-@import "react-responsive-carousel/lib/styles/carousel.min.css";
-@import "~react-image-gallery/styles/css/image-gallery.css";
-
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-#root {
-  min-width: 360px;
-} */
-
-@import './vendor/normalize.scss';
-@import './styles/variables.scss';
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
-
-
+@import './styles/normalize.scss';
+@import './styles/variables.scss';
 
 
 
@@ -106,13 +82,3 @@ img {
         margin: 0 16px;
     }
 }
-
-@import './styles/reusable/header.scss';
-@import './styles/main/search.scss';
-@import './styles/reusable/input-form.scss';
-@import './styles/main/film-list.scss';
-@import './styles/main/film.scss';
-@import './styles/reusable/ratings.scss';
-@import './styles/about/cover.scss';
-@import './styles/about/description.scss';
-@import './styles/reusable/footer.scss';
