--- a/src/components/filmItem/FilmItem.scss
+++ b/src/components/filmItem/FilmItem.scss
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: column;
     max-width: 100%;
+    min-height: 384px;
     border-radius: 12px;
     background: rgba(32, 40, 62, 0.8);
     backdrop-filter: blur(80px);
@@ -33,7 +34,9 @@
 }
 
 .film__poster {
+    height: 400px;
     max-height: 400px;
+    min-height: 260px;
     width: 100%;
     object-fit: cover;
     object-position: center;
@@ -103,7 +106,7 @@
     border-radius: 12px;
     color: var(--grey-200);
     font-weight: 500;
-    font-size: 17px;
+    font-size: 18px;
     font-style: normal;
     line-height: 1.15;
     opacity: 0;
@@ -211,7 +214,7 @@
     }
 
     .film__descr-text {
-        font-size: 12px;
+        font-size: 14px;
     }
 }
 
