feat: добавить корректную ошибку при пустом поиске

--- a/src/components/filmList/FilmList.scss
+++ b/src/components/filmList/FilmList.scss
@@ -1,6 +1,11 @@
 .film-list {
     margin-top: 80px;
     min-width: 100%;
+    min-height: 384px;
+}
+
+.film-list__notfound {
+    margin-left: 55px;
 }
 
 
