--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -13,6 +13,7 @@
     width: 100%;
     display: flex;
     justify-content: space-between;
+    min-height: 80px;
 }
 
 .header__films-counter {
@@ -100,7 +101,6 @@
 }
 
 .header__hamburger_active {
-    
 
     path:nth-child(1) {
         transform: translateX(9px) translateY(1px) rotate(45deg);
