--- a/src/components/filmItem/Ratings.scss
+++ b/src/components/filmItem/Ratings.scss
@@ -13,6 +13,8 @@
     padding: 6px;
     transition: opacity 2s ease-out;
     cursor: default;
+    min-width: 107px;
+    min-height: 27px;
     &:hover {
         opacity: 0.3;
     }
