style: добавить анимации роутов, изменить add button

--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -9,6 +9,9 @@
     justify-content: center;
     align-items: center;
     
+    position: absolute;
+    left: 0;
+    bottom: 0;
 }
 
 .footer__disclamer {
