--- a/src/index.scss
+++ b/src/index.scss
@@ -43,14 +43,36 @@ img {
     border-style: none;
 }
 
-#default-view {
-    margin: 0 auto;
+html, body {
+   height: 100vh;
 }
+
+#root {
+  display: flex;
+  flex-direction: column;
+
+  min-height: 100%;
+  position: relative;
+  
+}
+
+.default-view {
+
+  margin: 0 auto;
+
+  padding-bottom: 208px;
+}
+
+body {
+    --delay: 300ms;
+}
+
 
 .container {
     max-width: 1440px;
     margin: 0 120px;
 }
+
 
 .transition-appear {
     opacity: 0;
@@ -91,6 +113,88 @@ img {
     opacity: 0;
     transition: opacity 200ms;
 }
+
+//scale
+    .scale-appear {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+  
+  .scale-appear-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 1000ms, transform 1000ms;
+  }
+
+  .scale-appear-done {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 1000ms, transform 1000ms;
+  }
+  
+  .scale-enter {
+    opacity: 0;
+    transform: scale(0.8);
+  }
+  
+  .scale-enter-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 1000ms, transform 1000ms;
+  }
+
+  .scale-enter-done {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity 1000ms, transform 1000ms;
+  }
+  
+  .scale-exit {
+    opacity: 1;
+    transform: scale(1);
+  }
+  
+  .scale-exit-active {
+    opacity: 0;
+    transform: scale(0.8);
+    transition: opacity 1000ms, transform 1000ms;
+  }
+
+  .scale-exit-done {
+    opacity: 0;
+    transform: scale(0.9);
+    transition: opacity 1000ms, transform 1000ms;
+  }
+
+  .page {
+    position: absolute;
+    left: 15px;
+    right: 15px;
+  }
+  
+  .page-enter {
+    opacity: 0;
+    transform: scale(1.1);
+  }
+  
+  .page-enter-active {
+    opacity: 1;
+    transform: scale(1);
+    transition: opacity var(--delay), transform var(--delay);
+  }
+  
+  .page-exit {
+    opacity: 1;
+    transform: scale(1);
+  }
+  
+  .page-exit-active {
+    opacity: 0;
+    transform: scale(0.9);
+    transition: opacity var(--delay), transform var(--delay);
+  }
+
+
 
 
 @media screen and (max-width: 1023px) {
