--- a/src/components/filmItem/FilmItem.scss
+++ b/src/components/filmItem/FilmItem.scss
@@ -130,10 +130,14 @@
     bottom: 20px;
     color: var(--grey-50);
     cursor: pointer;
+    transition: transform 0.5s ease-out;
     svg {
         object-position: center;
     }
 
+    &:hover {
+        transform: scale(1.1);
+    }
     
     &:active {
         animation: 0.1s tremor ease-out infinite;
