--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -25,6 +25,13 @@
     object-position: center;
     object-fit: cover;
     border-radius: 100%;
+    transition: all 0.5s ease-out;
+    &:hover {
+        transform: scale(1.1);
+        -webkit-box-shadow: 0px 0px 13px 0px rgba(190, 183, 251, 0.35);
+        -moz-box-shadow: 0px 0px 13px 0px rgba(190, 183, 251, 0.35);
+        box-shadow: 0px 0px 13px 0px rgba(190, 183, 251, 0.35);
+    }
 }
 
 .header__wrapper {
@@ -80,6 +87,10 @@
     line-height: 1.5;
     letter-spacing: 0.02em;
     font-weight: 600;
+    transition: all 0.5s ease-out;
+    &:hover {
+        color: var(--grey-50)
+    }
 }
 
 .header__hamburger {
@@ -89,6 +100,11 @@
     height: 80px;
     transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1);
     cursor: pointer;
+    transition: transform 0.5s ease-out;
+    &:hover {
+        transform: scale(1.1);
+    }
+    
     path {
         stroke: var(--grey-400);
         transition: transform 500ms cubic-bezier(0.4, 0, 0.2, 1),
