fix: исправил отображение загрузки, скелетон при загрузке списка

--- a/src/index.scss
+++ b/src/index.scss
@@ -55,11 +55,11 @@ html, body {
   position: relative;
   
 }
-
-.default-view {
-
+.main-view {
   margin: 0 auto;
-  min-width: 100%;
+}
+.default-view {
+  margin: 0 auto;
   padding-bottom: 208px;
 }
 
