--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -45,6 +45,7 @@
     border: none;
     cursor: pointer;
     margin-right: 20px;
+    height: 100%;
 }
 .header__films-counter {
     color: var(--grey-200);
