add app auth check with profile update

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -12,10 +12,17 @@
     background: none;
     border-radius: 100%;
     border: 0;
-    width: 50px;
     height: 50px;
-    margin: auto 0;
+    margin: auto 0 auto 20px;
     cursor: pointer;
+    display: flex;
+    transition: all 0.5s ease-out;
+    &:hover {
+        transform: scale(1.1);
+        -webkit-box-shadow: 0 0 13px 0 rgba(190, 183, 251, 0.35);
+        -moz-box-shadow: 0 0 13px 0 rgba(190, 183, 251, 0.35);
+        box-shadow: 0 0 13px 0 rgba(190, 183, 251, 0.35);
+    }
 }
 
 .header__avatar {
@@ -25,13 +32,10 @@
     object-position: center;
     object-fit: cover;
     border-radius: 100%;
-    transition: all 0.5s ease-out;
-    &:hover {
-        transform: scale(1.1);
-        -webkit-box-shadow: 0px 0px 13px 0px rgba(190, 183, 251, 0.35);
-        -moz-box-shadow: 0px 0px 13px 0px rgba(190, 183, 251, 0.35);
-        box-shadow: 0px 0px 13px 0px rgba(190, 183, 251, 0.35);
-    }
+}
+
+.header__buttons-wrapper {
+    margin-left: 20px;
 }
 
 .header__wrapper {
