--- a/src/components/signUpModal/SignUpModal.scss
+++ b/src/components/signUpModal/SignUpModal.scss
@@ -4,6 +4,13 @@
 }
 
 .signup-modal__form {
+  & svg {
+    cursor: pointer;
+    position: absolute;
+    top: -20px;
+    right: -20px;
+
+  }
   width: 400px;
   background: var(--grey-900-40);
   -webkit-backdrop-filter: blur(24px);
@@ -16,6 +23,10 @@
 }
 
 .signup-modal__input {
+  & input {
+    color: #fff;
+  }
+  position: relative;
   background: rgba(0, 0, 0, 0.1);
    .MuiOutlinedInput-root {
      border: 2px solid var(--grey-800);
