--- a/src/components/description/Description.scss
+++ b/src/components/description/Description.scss
@@ -45,7 +45,7 @@
     margin: 0;
     color: var(--grey-400);
     font-weight: 500;
-    font-size: 16;
+    font-size: 16px;
     line-height: 1.5;
 }
 
