--- a/src/components/filmItem/FilmItem.scss
+++ b/src/components/filmItem/FilmItem.scss
@@ -1,12 +1,10 @@
 @keyframes tremor {
     0%, 25% {
         right: 15px;
-        -webkit-transform: translateX(-8%);
         transform: translateX(-8%);
     }
     50%, 100% {
         right: 21px;
-        -webkit-transform: translateX(8%);
         transform: translateX(8%);
     }
 }
@@ -63,7 +61,7 @@
 
 .film__descr {
     position: relative;
-    margin: 16px 0 0 8px;
+    margin: auto 0 0 8px;
     font-weight: 600;
     font-size: 16px;
     line-height: 1.5;
@@ -71,7 +69,6 @@
     color: var(--primary-400);
     transition: color 0.6s ease-in-out;
     align-self: flex-start;
-    margin-top: auto;
     padding-top: 16px;
     
     &:hover {
@@ -98,7 +95,6 @@
     z-index: -1;
     margin: 8px 8px 0 8px;
     scrollbar-width: none; /* firefox */
-    height: 23.64vw;
     max-width: 100%;
     padding: 12px;
     border-radius: 12px;
@@ -109,11 +105,11 @@
     line-height: 1.15;
     opacity: 0;
     background-color: var(--grey-700-80);
-    border-radius: 12px;
     -webkit-backdrop-filter: blur(24px);
     backdrop-filter: blur(24px);
-    overflow: hidden;
     transition: opacity 0.5s ease-in-out;
+    overflow: hidden;
+    height: 100%;
     &:hover {
         opacity: 1;
         transition: opacity 0.5s ease-in-out;
